// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <div>
    <button
      class="Button__StyledButton-mdtvtf-0 ebCALD"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <div>
    <button
      class="Button__StyledButton-mdtvtf-0 bHFVZX"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <div>
    <button
      class="Button__StyledButton-mdtvtf-0 fmfMlQ"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <div>
    <button
      class="Button__StyledButton-mdtvtf-0 ksXbdo"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render as danger button 1`] = `
<div>
  <div>
    <button
      class="Button__StyledButton-mdtvtf-0 bsLEUc"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render as primary button 1`] = `
<div>
  <div>
    <button
      class="Button__StyledButton-mdtvtf-0 ebCALD"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render as secondary button 1`] = `
<div>
  <div>
    <button
      class="Button__StyledButton-mdtvtf-0 bHPNtZ"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render as transparent button 1`] = `
<div>
  <div>
    <button
      class="Button__StyledButton-mdtvtf-0 esSerq"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <div>
    <button
      class="Button__StyledButton-mdtvtf-0 SIdRB"
      disabled=""
      type="button"
    >
      Click
    </button>
  </div>
</DocumentFragment>
`;
